# $Id$
2007-07-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* AnonymisedDataExport.php:  Work around the huge memory requirements this report used to have.
	
2007-07-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* At long last, implement #9:  Automatic new node creation.  When attempting to login from an unknown node, the user (if he has the permissions) will be prompted to create the node, or "steal" en existing one (for hardware swaps).
	* Refactor Node:getSelectNodeUI().
	* Menu.php:  Fix small oversight causing menu not to clear.
	
2007-07-19 Benoit Grégoire  <bock@step.polymtl.ca>
	UIUserList fixes:
	* Node::getRecentUsers():  Get the 5 most recent users, not some random users in the last week.  Also, exclude users currently logged-in.
	* Node::getActiveUsers():  Function was unbearably slow, now limit the search space to the last 3 months.  Get the 5 user who connected on the most differents days, instead of users with the worst wireless card ;) 
	* schema_validate.php: Add index for timestamp_in on connection table.
	
2007-07-17 Benoit Grégoire  <bock@step.polymtl.ca>
	* Use last_heartbeat_sys_uptime untill #354 is fixed

2007-07-16  Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix display of wifidog uptime in node list
	* Preliminary skinning of the menu
	* Network::getNumOnlineUsers():  Fix #40 by counting active connexion tokens, not distinct user id's.  That way users logged in twice (splash-only, or username if allowed in network config) will be counted twice. 
	* UIUserList_getUserUI.tpl:  Fix #337
	* Node.php:  Improve getCurrentRealNode()
	* Implement #4:  Allow the user to easily come back to the portal by typing in the root auth server adress from a hotspot.
	* Log the system information sent with the gateway since almost forever:  sys_uptime, sys_memfree, sys_load, wifidog_uptime
	* NodeStatus.php:  Include the above information
	* node_list.html:  Include wifidog_uptime if the hotspot is up.